Finalize deployment data: use processed_features as ML-ready source

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
 # Models
 models/*.pkl
 
-# Processed data
-data/processed/
-data/processed_features/
-
 # Results
 results/
 
@@ -14,3 +10,8 @@ notebooks/.ipynb_checkpoints/
 # Python
 __pycache__/
 *.pyc
+
+data/processed/
+temp_backup/
+desktop.ini
+
